--- a/code3/frontend/public/index.html
+++ b/code3/frontend/public/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app"/>
-    <title>FitTracker 5000</title>
+    <meta name="description" content="Web site created by Byron Peregrim"/>
+    <title>FitTracker5000</title>
   </head>
   <body>
     <div id="root"></div>
